--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ alt="Web Analytics"&gt;&lt;/a&gt;&lt;/div&gt;</noscript><table summary="Table fo
 <h1>Zhaoxian Wu</h1>
 </div>
 <table class="imgtable"><tbody><tr><td>
-<a href="https://Zhaoxian-Wu.github.io/"><img src="image.jpg" alt="alt text" width="150px" ></a>&nbsp;</td>
+<a href="https://Zhaoxian-Wu.github.io/"><img src="image-2024.07.13.jpg" alt="alt text" width="150px" ></a>&nbsp;</td>
 <td align="left">
 
 <p> <b>Zhaoxian Wu</b></p>  
@@ -83,17 +83,29 @@ Prior to joining RPI, I received the bachelor's and master's degree from Sun Yat
 
 <h2>Recent News</h2>
 <ul>
-<li>
-  <p>
-  Aug 2023: Our paper was accepted in the <b>TSP</b>:</p>
-  </p><ul>
-  <a href="https://ieeexplore.ieee.org/abstract/document/10208131">Byzantine-Resilient Decentralized Stochastic Optimization with Robust Aggregation Rules</a>. 
-</ul>
-  <!-- <p>&nbsp; &nbsp; Another paper was accepted in the <b>2023 American Control Conference (ACC)</b>!:</p>
-  <ul>  <li><a href="https://arxiv.org/pdf/2209.12307.pdf">On the Stability Analysis of Open Federated Learning Systems</a>.</li> </ul>
- </li>
- <p></p> -->
+  <li>
+    <p>Sep 2024: Our paper was accepted in the <b>Conference on Neural Information Processing Systems (NeurIPS 2024)</b>:</p>
+    <ul>
+      <a href="https://arxiv.org/abs/2406.12774">Towards Exact Gradient-based Training on Analog In-memory Computing</a>. 
+    </ul>
+  </li>
 
+  <li>
+    <p>Dec 2023: Our paper was accepted in the <b>IEEE Transactions on Signal Processing (TSP)</b>:</p>
+    <ul>
+      <a href="https://arxiv.org/abs/2406.12774">Byzantine-Robust Distributed Online Learning: Taming Adversarial Participants in An Adversarial Environment</a>. 
+    </ul>
+  </li>
+
+  <li>
+    <p>Aug 2023: Our paper was accepted in the <b>IEEE Transactions on Signal Processing (TSP)</b>:</p>
+    <ul>
+      <a href="https://ieeexplore.ieee.org/abstract/document/10208131">Byzantine-Resilient Decentralized Stochastic Optimization with Robust Aggregation Rules</a>. 
+    </ul>
+    <!-- <p>&nbsp; &nbsp; Another paper was accepted in the <b>2023 American Control Conference (ACC)</b>!:</p>
+    <ul>  <li><a href="https://arxiv.org/pdf/2209.12307.pdf">On the Stability Analysis of Open Federated Learning Systems</a>.</li> </ul>
+  <p></p> -->
+  </li>
 </ul>
 
 <div id="footer">
