--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 <link rel="icon" href="cty.png">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Heshan Fernando</title>
+<title>Zhaoxian Wu</title>
 </head>
 <body>
 <noscript>&lt;div class="statcounter"&gt;&lt;a title="Web Analytics"
@@ -48,6 +48,12 @@ As one of the central topics in distributed networks, my recent work focus on <b
 
 <h2>Journals</h2>
 <ul>
+
+  <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10354032">Byzantine-Robust Distributed Online Learning: Taming Adversarial Participants in An Adversarial Environment</a></p>
+    <ul>
+    <li><p>Xingrong Dong, <b>Zhaoxian Wu</b>, Qing Ling, Zhi Tian</p></li>
+    </ul>
+  </li>
     
   <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10208131">Byzantine-Resilient Decentralized Stochastic Optimization with Robust Aggregation Rules</a></p>
   <ul>
@@ -66,7 +72,7 @@ As one of the central topics in distributed networks, my recent work focus on <b
   <li><p><a href="https://ieeexplore.ieee.org/document/9447173">Communication-censored Distributed Stochastic Gradient Descent</a></p>
     <ul>
     <li><p>Weiyu Li, <b>Zhaoxian Wu</b>, Tianyi Chen, Liping Li, Qing Ling</p></li>
-    <li><p>IEEE Transactions on Neural Networks and Learning Systems<b>(TNNLS)</b>, 2021</p></li>
+    <li><p>IEEE Transactions on Neural Networks and Learning Systems <b>(TNNLS)</b>, 2021</p></li>
     </ul>
   </li>
       
@@ -88,6 +94,20 @@ As one of the central topics in distributed networks, my recent work focus on <b
 
 <h2>Conference</h2>
 <ul>
+
+  <li><p><a href="https://arxiv.org/abs/2406.12774">Towards Exact Gradient-based Training on Analog In-memory Computing</a></p>
+    <ul>
+    <li><p><b>Zhaoxian Wu</b>, Tayfun Gokmen, Malte J. Rasch, Tianyi Chen</p></li>
+    <li><p>Conference on Neural Information Processing Systems <b>(NeurIPS)</b>, 2024</p></li>
+    </ul>
+  </li>
+
+  <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10095178">Distributed Online Learning With Adversarial Participants In An Adversarial Environment</a></p>
+    <ul>
+    <li><p>Yue Huang, <b>Zhaoxian Wu</b>, Qing Ling</p></li>
+    <li><p>International Conference on Acoustics, Speech, and Signal Processing <b>(ICASSP)</b>, 2024</p></li>
+    </ul>
+  </li>
 
   <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10095178">Distributed Online Learning With Adversarial Participants In An Adversarial Environment</a></p>
     <ul>
@@ -120,16 +140,20 @@ As one of the central topics in distributed networks, my recent work focus on <b
 
 </ul>
 
-<h2>Preprints</h2>
+<!-- <h2>Preprints</h2>
 <ul>
   <li><p><a href="https://arxiv.org/abs/2307.07980">Byzantine-Robust Distributed Online Learning: Taming Adversarial Participants in An Adversarial Environment</a></p>
     <ul>
     <li><p>Xingrong Dong, <b>Zhaoxian Wu</b>, Qing Ling, Zhi Tian</p></li>
-    <!-- <li><p>International Conference on Acoustics, Speech, and Signal Processing <b>(ICASSP)</b>, 2023</p></li> -->
     </ul>
   </li>
 
-</ul>
+  <li><p><a href="https://arxiv.org/abs/2307.07980">Byzantine-Robust Distributed Online Learning: Taming Adversarial Participants in An Adversarial Environment</a></p>
+    <ul>
+    <li><p>Xingrong Dong, <b>Zhaoxian Wu</b>, Qing Ling, Zhi Tian</p></li>
+    </ul>
+  </li>
+</ul> -->
 
 <div id="footer">
 <div id="footer-text">
