add discussion on AIMC

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ Ph.D. Student<br>
  E-mail: wuz16 [@] rpi [.] edu<br> 
  <p></p>
  
-<a href="https://scholar.google.com/citations?user=Hyk4lXJy4CEC&hl=en"> Google Scholar</a><br>
+<a href="https://scholar.google.com/citations?user=Hyk4lXJy4CEC&hl=en">Google Scholar</a><br>
 <a href="https://github.com/zhaoxian-wu">Github</a><br>
-<a href="https://www.linkedin.cn/incareer/in/wuzhx">Linkedin</a><br>
+<a href="https://www.linkedin.com/in/wuzhx/">Linkedin</a><br>
 
 </td></tr></tbody></table>
 
@@ -62,7 +62,7 @@ I am now pursuing my Ph.D. degree at Rensselaer Polytechnic Institute, fortunate
 Prior to joining RPI, I received the bachelor's and master's degree from Sun Yat-sen University under the supervision of <a href="http://home.ustc.edu.cn/~qingling/">Prof. Qing Ling</a>. 
 </p> 
 
-<b>Research interests</b>: theoretical and algorithmic foundations of optimization and machine learning
+<b>Research interests</b>: Analog In-memory Computing; Optimization in deep learning
 
 <br> 
 
