--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ alt="Web Analytics"&gt;&lt;/a&gt;&lt;/div&gt;</noscript><table summary="Table fo
 <h1>Zhaoxian Wu</h1>
 </div>
 <table class="imgtable"><tbody><tr><td>
-<a href="https://Zhaoxian-Wu.github.io/"><img src="image-2024.07.13.jpg" alt="alt text" width="150px" ></a>&nbsp;</td>
+<a href="https://Zhaoxian-Wu.github.io/"><img src="image-2025.01.18.JPG" alt="alt text" width="150px" ></a>&nbsp;</td>
 <td align="left">
 
 <p> <b>Zhaoxian Wu</b></p>  
