--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@ Prior to joining RPI, I received the bachelor's and master's degree from Sun Yat
 <h2>Recent News</h2>
 <ul>
   <li>
+    <p>Dec 2024: Our early work back to 2020 on Byzantine-resilient federated learning has been honored with the <b>IEEE Signal Processing Society Young Author Best Paper Award</b> 
+      <a href="https://signalprocessingsociety.org/community-involvement/award-recipients">(info)</a>
+      <a href="https://ecse.rpi.edu/news/ecse-student-and-faculty-won-ieee-signal-processing-society-young-author-best-paper-award">(more info)</a>:</p>
+    <ul>
+      <a href="https://ieeexplore.ieee.org/abstract/document/9153949">Federated Variance-Reduced Stochastic Gradient Descent With Robustness to Byzantine Attacks</a>. 
+    </ul>
+  </li>
+
+  <li>
     <p>Sep 2024: Our paper was accepted in the <b>Conference on Neural Information Processing Systems (NeurIPS 2024)</b>:</p>
     <ul>
       <a href="https://arxiv.org/abs/2406.12774">Towards Exact Gradient-based Training on Analog In-memory Computing</a>. 
