--- a/research.html
+++ b/research.html
@@ -114,7 +114,7 @@ As one of the central topics in distributed networks, my recent work focus on <b
     </ul>
   </li>
 
-  <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10095178">Distributed Online Learning With Adversarial Participants In An Adversarial Environment</a></p>
+  <li><p><a href="https://ieeexplore.ieee.org/document/10447185">On the Convergence of Single-Timescale Multi-Sequence Stochastic Approximation Without Fixed Point Smoothness</a></p>
     <ul>
     <li><p>Yue Huang, <b>Zhaoxian Wu</b>, Qing Ling</p></li>
     <li><p>International Conference on Acoustics, Speech, and Signal Processing <b>(ICASSP)</b>, 2024</p></li>
