--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@ Prior to joining RPI, I received the bachelor's and master's degree from Sun Yat
 <h2>Recent News</h2>
 <ul>
   <li>
+    <p>May 2025: Our paper was accepted in the <b>IEEE Transactions on Signal Processing (TSP)</b>:</p>
+    <ul>
+      <a href="https://ieeexplore.ieee.org/abstract/document/11003478">Single-Timescale Multi-Sequence Stochastic Approximation Without Fixed Point Smoothness: Theories and Applications</a>. 
+    </ul>
+    <!-- <p>&nbsp; &nbsp; Another paper was accepted in the <b>2023 American Control Conference (ACC)</b>!:</p>
+    <ul>  <li><a href="https://arxiv.org/pdf/2209.12307.pdf">On the Stability Analysis of Open Federated Learning Systems</a>.</li> </ul>
+  <p></p> -->
+  </li>
+
+  <li>
     <p>Dec 2024: Our early work back to 2020 on Byzantine-resilient federated learning has been honored with the <b>IEEE Signal Processing Society Young Author Best Paper Award</b> 
       <a href="https://signalprocessingsociety.org/community-involvement/award-recipients">(info)</a>
       <a href="https://ecse.rpi.edu/news/ecse-student-and-faculty-won-ieee-signal-processing-society-young-author-best-paper-award">(more info)</a>:</p>
