--- a/research.html
+++ b/research.html
@@ -61,6 +61,13 @@ As one of the central topics in distributed networks, my recent work focus on <b
 <h2>Journals</h2>
 <ul>
 
+  <li><p><a href="https://ieeexplore.ieee.org/abstract/document/11003478">Single-Timescale Multi-Sequence Stochastic Approximation Without Fixed Point Smoothness: Theories and Applications</a></p>
+    <ul>
+    <li><p>Yue Huang, <b>Zhaoxian Wu</b>, Shiqian Ma, Qing Ling</p></li>
+    </ul>
+  </li>
+  
+
   <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10354032">Byzantine-Robust Distributed Online Learning: Taming Adversarial Participants in An Adversarial Environment</a></p>
     <ul>
     <li><p>Xingrong Dong, <b>Zhaoxian Wu</b>, Qing Ling, Zhi Tian</p></li>
