--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@ alt="Web Analytics"&gt;&lt;/a&gt;&lt;/div&gt;</noscript><table summary="Table fo
 
 <p> <b>Zhaoxian Wu</b></p>  
 Ph.D. Student<br>
-<a href="https://www.ecse.rpi.edu/">Department of Electrical, Computer, and Systems Engineering</a> <br>
-<a href="http://www.rpi.edu/">Rensselaer Polytechnic Institute</a> <p></p>
+<a href="https://tech.cornell.edu/">Department of Electrical and Computer Engineering</a> <br>
+<a href="https://tech.cornell.edu/">Cornell University</a> <p></p>
 
  <br>
- E-mail: wuz16 [@] rpi [.] edu<br> 
+ E-mail: zw868 [@] cornell [.] edu<br> 
  <p></p>
  
 <a href="https://scholar.google.com/citations?user=Hyk4lXJy4CEC&hl=en">Google Scholar</a><br>
@@ -56,10 +56,10 @@ Ph.D. Student<br>
 
 <h2>About me</h2>
 <p> 
-I am now pursuing my Ph.D. degree at Rensselaer Polytechnic Institute, fortunate to be advised by <a href="https://www.ecse.rpi.edu/people/faculty/tianyi-chen">Prof. Tianyi Chen</a>. 
+I am now pursuing my Ph.D. degree at Cornell Tech and Cornell University, fortunate to be advised by <a href="https://www.ecse.rpi.edu/people/faculty/tianyi-chen">Prof. Tianyi Chen</a>. 
 </p> 
 <p> 
-Prior to joining RPI, I received the bachelor's and master's degree from Sun Yat-sen University under the supervision of <a href="http://home.ustc.edu.cn/~qingling/">Prof. Qing Ling</a>. 
+Prior to joining RPI and Cornell, I received the bachelor's and master's degree from Sun Yat-sen University under the supervision of <a href="http://home.ustc.edu.cn/~qingling/">Prof. Qing Ling</a>. 
 </p> 
 
 <b>Research interests</b>: Analog In-memory Computing; Optimization in deep learning
@@ -72,7 +72,9 @@ Prior to joining RPI, I received the bachelor's and master's degree from Sun Yat
   
 <h2>Education</h2>
 <ul>
-<li><p> <a href="https://www.ecse.rpi.edu/"> Rensselaer Polytechnic Institute</a>, Troy, New York, USA: Ph.D., Electrical Engineering, 2023 - Present</p>
+<li><p> <a href="https://www.ecse.rpi.edu/"> Cornell Tech and Cornell University</a>, New York, New York, USA: Ph.D. student, Electrical Engineering, 2025 - Present</p>
+</li>
+<li><p> <a href="https://www.ecse.rpi.edu/"> Rensselaer Polytechnic Institute</a>, Troy, New York, USA: Ph.D. student, Electrical Engineering, 2023 - 2025</p>
 </li>
 <li> <p> <a href="https://cse.sysu.edu.cn/"> Sun Yat-sen University </a>, Guangzhou, Guangdong, China: M.E., Computer Science, 2020 - 2023</p>
 </li>
