--- a/index.html
+++ b/index.html
@@ -72,19 +72,28 @@ Prior to joining RPI and Cornell, I received the bachelor's and master's degree 
   
 <h2>Education</h2>
 <ul>
-<li><p> <a href="https://www.ecse.rpi.edu/"> Cornell Tech and Cornell University</a>, New York, New York, USA: Ph.D. student, Electrical Engineering, 2025 - Present</p>
+<li><p> <a href="https://tech.cornell.edu/"> Cornell Tech and Cornell University</a>, New York, New York, USA: Ph.D. student, Electrical Engineering, 2025 - Present</p>
 </li>
 <li><p> <a href="https://www.ecse.rpi.edu/"> Rensselaer Polytechnic Institute</a>, Troy, New York, USA: Ph.D. student, Electrical Engineering, 2023 - 2025</p>
 </li>
-<li> <p> <a href="https://cse.sysu.edu.cn/"> Sun Yat-sen University </a>, Guangzhou, Guangdong, China: M.E., Computer Science, 2020 - 2023</p>
+<li> <p> <a href="https://cse.sysu.edu.cn/"> Sun Yat-sen University</a>, Guangzhou, Guangdong, China: M.E., Computer Science, 2020 - 2023</p>
 </li>
-<li> <p> <a href="https://cse.sysu.edu.cn/"> Sun Yat-sen University </a>, Guangzhou, Guangdong, China: B.E., Software Engineering, 2016 - 2020</p>
+<li> <p> <a href="https://cse.sysu.edu.cn/"> Sun Yat-sen University</a>, Guangzhou, Guangdong, China: B.E., Software Engineering, 2016 - 2020</p>
 </li>
 </ul>
 
 
 <h2>Recent News</h2>
 <ul>
+  
+  <li>
+    <p>Sep 2025: Our paper about overcoming the hardware imperfection in analog in-memory computing hardware has been accepted as an <b>oral presentation (top 0.3%)</b> at  <b>Conference on Neural Information Processing Systems (NeurIPS 2025)</b>:</p>
+    <ul>
+      <a href="https://arxiv.org/abs/2502.06309">Analog In-memory Training on General Non-ideal Resistive Elements: The Impact of Response Functions</a>. 
+    </ul>
+  </li> 
+
+
   <li>
     <p>May 2025: Our paper was accepted in the <b>IEEE Transactions on Signal Processing (TSP)</b>:</p>
     <ul>
