--- a/research.html
+++ b/research.html
@@ -116,6 +116,13 @@ As one of the central topics in distributed networks, my recent work focus on <b
 <h2>Conference</h2>
 <ul>
 
+  <li><p><a href="https://arxiv.org/abs/2502.06309">Analog In-memory Training on General Non-ideal Resistive Elements: The Impact of Response Functions</a></p>
+    <ul>
+    <li><p><b>Zhaoxian Wu</b>, Quan Xiao, Tayfun Gokmen, Omobayode Fagbohungbe, Tianyi Chen</p></li>
+    <li><p>Conference on Neural Information Processing Systems <b>(NeurIPS)</b>, 2025</p></li>
+    </ul>
+  </li>
+
   <li><p><a href="https://arxiv.org/abs/2406.12774">Towards Exact Gradient-based Training on Analog In-memory Computing</a></p>
     <ul>
     <li><p><b>Zhaoxian Wu</b>, Tayfun Gokmen, Malte J. Rasch, Tianyi Chen</p></li>
