--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@ Prior to joining RPI and Cornell, I received the bachelor's and master's degree 
 <ul>
   
   <li>
+    <p>Oct 2025: Our paper about the ability to escape sharp local minima in decentralized learning systems was accepted in the <b>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</b>:</p>
+    <ul>
+      <a href="https://ieeexplore.ieee.org/abstract/document/11050993">On the Trade-Off Between Flatness and Optimization in Distributed Learning</a>. 
+    </ul>
+  </li>
+  
+  <li>
     <p>Sep 2025: Our paper about overcoming the hardware imperfection in analog in-memory computing hardware has been accepted as an <b>oral presentation (top 0.3%)</b> at  <b>Conference on Neural Information Processing Systems (NeurIPS 2025)</b>:</p>
     <ul>
       <a href="https://arxiv.org/abs/2502.06309">Analog In-memory Training on General Non-ideal Resistive Elements: The Impact of Response Functions</a>. 
@@ -99,9 +106,6 @@ Prior to joining RPI and Cornell, I received the bachelor's and master's degree 
     <ul>
       <a href="https://ieeexplore.ieee.org/abstract/document/11003478">Single-Timescale Multi-Sequence Stochastic Approximation Without Fixed Point Smoothness: Theories and Applications</a>. 
     </ul>
-    <!-- <p>&nbsp; &nbsp; Another paper was accepted in the <b>2023 American Control Conference (ACC)</b>!:</p>
-    <ul>  <li><a href="https://arxiv.org/pdf/2209.12307.pdf">On the Stability Analysis of Open Federated Learning Systems</a>.</li> </ul>
-  <p></p> -->
   </li>
 
   <li>
